<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_bright"
    android:clickable="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/account_ll_root_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="70"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorTextLayout">

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/email"
                android:imeOptions="actionGo"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:text="" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorTextLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/password"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_button"
            android:text="@string/sign_in"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@drawable/button_states_colors" />

        <TextView
            android:id="@+id/linkRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:gravity="center"
            android:text="@string/register_here"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0b84aa" />

        <TextView
            android:id="@+id/tvOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</LinearLayout>