<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_bright"
    android:clickable="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/account_ll_root_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/margin_default"
            android:gravity="start"
            android:text="@string/country"
            android:textColor="@color/gray_light1"
            android:textSize="@dimen/text_small" />

        <Spinner
            android:id="@+id/spinnerCountry"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:drawSelectorOnTop="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="start"
            android:hint="@string/country"
            android:popupBackground="#ffffff"
            android:spinnerMode="dialog"
            android:textColor="@color/gray_light1" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/cityWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorTextLayout">

            <EditText
                android:id="@+id/etCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/city"
                android:imeOptions="actionGo"
                android:inputType="text"
                android:maxLines="1"
                android:text="" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/zipWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorTextLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">

            <EditText
                android:id="@+id/etZip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/zip"
                android:imeOptions="actionGo"
                android:inputType="text"
                android:maxLines="1"
                android:text="" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btNextRegister3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_button"
            android:text="@string/sign_up"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@drawable/button_states_colors" />

        <TextView
            android:id="@+id/tvOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_twelve"
            android:gravity="center_horizontal"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</LinearLayout>