...
                android:maxLines="1"
                android:text="" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/cbTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree_terms_service"
            android:textColor="@drawable/checkbox_states_colors"
            />

        <Button
            android:id="@+id/btNextRegister2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_button"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/next"
            android:textAppearance="?android:attr/textAppearanceLarge"
...
